--- a/developers/tutorials/auction.mdx
+++ b/developers/tutorials/auction.mdx
@@ -1,4 +1,4 @@
-import TimeCalculator from "../../../components/time-calculator";
+import { TimeCalculator } from '/snippets/time-calculator.jsx';
 
 # Set up the Auction
 
