--- a/developers/what.mdx
+++ b/developers/what.mdx
@@ -1,9 +1,8 @@
 ---
 title: What is Boundless?
 description: Boundless is a universal protocol that brings ZK to every chain.
+icon: block-question
 ---
-
-## **What Is Boundless?**
 
 **Boundless is a universal protocol that brings ZK to every chain.**
 
