--- a/developers/why.mdx
+++ b/developers/why.mdx
@@ -1,9 +1,8 @@
 ---
 title: Why Boundless?
 description: A story of re-execution - ZK execution vs Blockchain Execution
+icon: face-thinking
 ---
-
-# Why Boundless?
 
 Traditionally, blockchains rely on a "global re-execution" model, where every node redundantly processes every transaction to achieve consensus on the network's state. While this model is secure and transparent, it creates a fundamental constraint: the network is limited by the slowest node. This means the collective computational capacity of all nodes is underutilized. The result is that blockchains can only handle simple computations, with anything complex becoming too expensive or hitting gas limits.
 
