--- a/developers/quick-start.mdx
+++ b/developers/quick-start.mdx
@@ -1,9 +1,8 @@
-
-# Quick Start (Build)
-
-:::tip[Need technical support?]
-For technical support, please post your questions on the [Boundless Discussions Forum](https://github.com/boundless-xyz/boundless/discussions).
-:::
+---
+title: Quick Start
+description: Build your first guest program and request your first proof on Boundless
+icon: rabbit-running
+---
 
 The [Boundless Foundry Template](https://github.com/boundless-xyz/boundless-foundry-template) is the best way to get started. It provides a starter application which has the following components:
 
@@ -15,6 +14,9 @@ The [Boundless Foundry Template](https://github.com/boundless-xyz/boundless-foun
     *  waits for the request to be fulfilled and receives the proof from the Boundless market
     *  submits the received proof to the `EvenNumber` contract for verification.
 
+<Tip>
+For technical support, please post your questions on the [Boundless Discussions Forum](https://github.com/boundless-xyz/boundless/discussions).
+</Tip>
 
 ## Setup the app locally
 
