--- a/developers/steel/history.mdx
+++ b/developers/steel/history.mdx
@@ -23,7 +23,7 @@ This is done by separating the pinned block in Steel into two separate blocks: t
 
 When using Steel history, the developer must specify both the execution block *and* the commitment block:
 
-<StripRustCodeComments>
+{/* <StripRustCodeComments> */}
 ```rust
 # use alloy::providers::ProviderBuilder;
 # use alloy::primitives::Address;
@@ -46,7 +46,7 @@ let mut contract = Contract::preflight(token_contract, &mut env);
 # Ok(())
 # }
 ```
-</StripRustCodeComments>
+{/* </StripRustCodeComments> */}
 
 The execution block is the block from which the view call state is retrieved
 (i.e. it is the block at which the call will be executed).
